<resources>
    <string name="app_name">智网出行</string>
    <string name="title_activity_login">登录</string>
    <string name="hello_world">Hello world!</string>
    <string name="blank_one">&#160;</string>
    <string name="blank_two">&#160;&#160;</string>
    <string name="blank_three">&#160;&#160;&#160;</string>
    <string name="blank_four">&#160;&#160;&#160;&#160;</string>
    <string name="blank_five">&#160;&#160;&#160;&#160;&#160;</string>
    <string name="send_vcard">发送</string>
    <string name="common_delete">删除</string>
    <string name="common_add">添加</string>
    <string name="common_back">返回</string>
    <string name="common_confirm">确定</string>
    <string name="common_finish">完成</string>
    <string name="common_send">发送</string>
    <string name="common_cancel">取消</string>
    <string name="common_update">更新</string>
    <string name="common_close">关闭</string>
    <string name="common_save">保存</string>
    <string name="common_save_image">保存图片到本地</string>
    <string name="common_refresh">刷新</string>
    <string name="common_quit">退出</string>
    <string name="common_open">在浏览器中打开</string>
    <string name="common_from">来自：</string>
    <string name="common_share_from">分享自：</string>
    <string name="common_loading">处理中&#8230;</string>
    <string name="common_phone">手机号码</string>
    <string name="common_email">邮箱</string>
    <string name="common_identify">实名认证</string>
    <string name="common_dialog_wait">正在提交，请稍候</string>
    <string name="get_data_err">获取数据失败</string>
    <string name="customer_consult">咨询客服电话</string>
    <string name="customer_confirm">拨打</string>
    <string name="network_error">网络异常，请稍候再试</string>
    <string name="add_chat_muc_name">请输入群名称：</string>
    <string name="add_chat_muc_name_length">最大18位</string>
    <string name="bottom_rbtn_firstpage">首页</string>
    <string name="bottom_rbtn_history">消息</string>
    <string name="bottom_rbtn_contacts">通讯录</string>
    <string name="bottom_rbtn_other_app">发现</string>
    <string name="bottom_rbtn_setting">我</string>
    <string name="ID">用户名 </string>
    <string name="Password">密码</string>
    <string name="LoginBtn">登录</string>
    <string name="UserNameError">非法用户名</string>
    <string name="PasswordError">密码不能为空</string>
    <string name="NoConnectionError">目前没有网络连接。</string>
    <string name="DialogLoginTitle">正在验证用户信息</string>
    <string name="DialogLoginWaiting">请稍候&#8230;</string>
    <string name="DialogLockedWaiting">设备被锁定，请联系管理员</string>
    <string name="ResultLoginOK">登录成功</string>
    <string name="ResultLoginError">用户名或密码不正确。</string>
    <string name="ResultLoginfobiden">该用户被禁用。</string>
    <string name="ResultLoginismanager">无此账号，请联系管理员进行注册。</string>
    <string name="ResultLoginbadservice">服务器异常。</string>
    <string name="ResultConnectError">连接服务器失败。</string>
    <string name="CopyRights">Copyright © 2014 DHC Corp. All Rights Reserved.</string>
    <string name="search_public_account_title">查找公众号</string>
    <string name="search_public_account_hint">关注公众号，获取更多资讯</string>
    <string name="public_account_title">公众号</string>
    <string name="public_account_title_take">订阅公众号</string>
    <string name="public_account_prefix">公众号：</string>
    <string name="public_contact_info_title">公众号详细</string>
    <string name="public_account_follow">订阅</string>
    <string name="public_account_unfollow">取消订阅</string>
    <string name="title_cancel_public">取消订阅后将不再收到其发送的消息</string>
    <string name="public_account_history_message">服务号主体</string>
    <string name="public_account_description">功能介绍</string>
    <string name="public_account_url">查看全文</string>
    <string name="public_account_take">订阅成功</string>
    <string name="public_account_take_err">订阅失败</string>
    <string name="public_account_cancel">取消订阅成功</string>
    <string name="public_account_cancel_err">取消订阅失败</string>
    <string name="public_account_enable">该公众号已被禁用，暂时无法提供服务</string>
    <string name="muc_title">群聊</string>
    <string name="muc_select_title">群组</string>
    <string name="organization_title">组织</string>
    <string name="organization_select_title">组织</string>
    <string name="feed_back_show">鼎信的每一个进步,都离不开您的意见和建议:</string>
    <string name="contact_list_delete_muc">确定要退出群组并删除聊天记录?</string>
    <string name="setting_delete_history"> 清空聊天记录</string>
    <string name="setting_logout">确定要注销？</string>
    <string name="setting_quit">确定要退出？</string>
    <string name="setting_history_deleted">聊天记录已经被清除</string>
    <string name="title_activity_seting_info">SetingInfoActivity</string>
    <string name="title_activity_chang_psw">ChangPswActivity</string>
    <string name="contact_info_title">详细资料</string>
    <string name="contact_info_department">部门：</string>
    <string name="contact_info_job">职务：</string>
    <string name="contact_info_mail">邮件：</string>
    <string name="contact_info_phone">电话：</string>
    <string name="contact_info_signature">签名：</string>
    <string name="contact_info_add">添加到通讯录</string>
    <string name="contact_info_muc">进入群组聊天</string>
    <string name="contact_info_muc_edit">编辑群组属性</string>
    <string name="contact_info_muc_id">(群组:%1$s)</string>
    <string name="contact_info_send">发送消息</string>
    <string name="contact_info_request">发送申请&#8230;</string>
    <string name="contact_info_exist">该联系人已经在通讯录中。</string>
    <string name="contact_info_request_info">添加该联系人到通讯录。</string>
    <string name="contact_info_request_ok">已成功添加该联系人到通讯录。</string>
    <string name="contact_info_add_ok">已成功添加该联系人到通讯录。</string>
    <string name="contact_info_confirm_ok">我已经添加你为好友了，现在我们可以对话啦。</string>
    <string name="contact_info_confirm_refuse">不好意思，我解除了我们之间的联系人关系。</string>
    <string name="contact_info_subscribe_confirm">%1$s发来了好友验证申请，同意申请并加入通讯录吗？</string>
    <string name="contact_info_confirm_unfollow">不好意思，我取消了关注。</string>
    <string name="setting_message_ontopchat">置顶聊天</string>
    <string name="setting_message_addcontact">加入通讯录</string>
    <string name="setting_message_disturbered">消息免打扰</string>
    <string name="setting_muc_delete_btn">删除并退出</string>
    <string name="chat_sned_voice">按住 说话</string>
    <string name="chat_no_sdcard">请插入SD卡。</string>
    <string name="chat_play_sound_failed">播放语音失败</string>
    <string name="chat_msg_record">手指上滑，取消录音</string>
    <string name="chat_msg_recordcancel">松开手指，取消发送</string>
    <string name="chat_short_voice">录音时间太短！</string>
    <string name="chat_msg_voice">[语音]</string>
    <string name="chat_msg_picture">[图片]</string>
    <string name="chat_msg_share">[分享]</string>
    <string name="chat_msg_locate">[位置]</string>
    <string name="chat_msg_picture_deleted">图片不存在或已经被删除。</string>
    <string name="chat_msg_voice_deleted">声音文件不存在或已损坏。</string>
    <string name="chat_msg_file_already_download">已下载</string>
    <string name="chat_msg_file_download_failed">下载失败</string>
    <string name="chat_msg_file_not_download">未下载</string>
    <string name="chat_msg_file_already_send">已发送</string>
    <string name="chat_msg_file_send_failed">发送失败</string>
    <string name="chat_msg_file_not_send">未发送</string>
    <string name="chat_msg_file_sending">发送中</string>
    <string name="chat_msg_file_downloading">下载中</string>
    <string name="chat_msg_file_open_failed">打开文件失败</string>
    <string name="chat_msg_file_upload_failed">上传文件失败。</string>
    <string name="chat_msg_file_upload">上传文件</string>
    <string name="chat_item_copy">复制消息</string>
    <string name="chat_item_copy_file_link">复制文件外链</string>
    <string name="chat_item_send">转发</string>
    <string name="chat_item_recall">撤回</string>
    <string name="chat_item_delete">删除</string>
    <string name="chat_item_copy_succeed">复制成功</string>
    <string name="chat_item_delete_succeed">删除成功</string>
    <string name="lbs1">开启我的足迹后，根据设置自己的位置信息上传到服务器端，服务器可以查看您的行动轨迹</string>
    <string name="lbs2">实时上传位置信息会消耗较多的电量，建议您在需要的时候才开启此功能。</string>
    <string name="lbs3">定位间隔30秒，将消耗更多的电量和上网流量用以实时上传获取您的位置信息</string>
    <string name="lbs4">定位间隔60秒，平衡电量，上网流量和定位实时性</string>
    <string name="lbs5">定位间隔180秒，更加省电量和上网流量</string>
    <string name="muc_contact_delete_member_confirm">确定要删除下列人员：\n%1$s</string>
    <string name="muc_contact_add_member_confirm">确定要添加下列人员：\n%1$s</string>
    <string name="muc_contact_delete_member_alert">不能移除自己。</string>
    <string name="muc_contact_add_room_group">确认加入群聊</string>
    <string name="password_change_title">修改密码</string>
    <string name="password_old_not_null">原密码不能为空</string>
    <string name="password_please_input_new">请输入新密码</string>
    <string name="password_new_min">新密码不能小于6位</string>
    <string name="password_new_max">新密码不能大于32位</string>
    <string name="password_please_input_new_again">请确认新密码</string>
    <string name="password_error_1">新密码和确认密码不一致</string>
    <string name="password_error_2">新密码不可与原密码一致</string>
    <string name="password_changed_by_server">您的密码被修改，请重新登录</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_content_placeholder">请输入您的意见或建议</string>
    <string name="feedback_email_placeholder">请输入正确的联系方式</string>
    <string name="feedback_complete_text">您的意见已成功提交，我们会尽快安排人员处理</string>
    <string name="general_title">通用</string>
    <string name="general_clear_message_text">确定清空所有个人和群的聊天记录?</string>
    <string name="setting_muc_description">群组简介：</string>
    <string name="contact_title">添加联系人</string>
    <string name="contact_list_search_hint">您准备在哪里还车？</string>
    <string name="locatedactivity_search_hint">您准备在哪里取车？</string>
    <string name="new_friend_title">新的朋友</string>
    <string name="vcard_error">不是鼎信名片</string>
    <string name="toast_error_network">网络错误</string>
    <string name="toast_success_operate">操作成功</string>
    <string name="toast_error_camera">调用相机失败,请检查相机权限是否打开</string>
    <string name="contact_list_title">联系人</string>
    <string name="menu_item_history_message">聊天记录</string>
    <string name="chatview_title_muc">(群组)</string>
    <string name="system_notice_flag">系统通知</string>
    <string name="business_notice_flag">待办事项</string>
    <string name="photo_select_title">图片选择</string>
    <string name="photo_select_menu_default">视频和图片</string>
    <string name="photo_select_menu_allvideo">所有视频</string>
    <string name="photo_select_menu_send_size">一次最多发送%1$s张图片</string>
    <string name="title_activity_public_cancel">PublicCancelActivity</string>
    <string name="capture_title">扫一扫</string>
    <string name="discoveryapp_title">应用</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="pop_contact_vcard_hujiao">呼叫</string>
    <string name="pop_contact_vcard_fasongduanxin">发送短信</string>
    <string name="pop_contact_vcard_tianjiadaotongxunlu">添加到手机通讯录</string>
    <string name="pop_public_cancel_congxiangcezhongxuanze">从相册中选择</string>
    <string name="pop_public_cancel_shangchuantouxiang">上传头像</string>
    <string name="pop_type_file_paizhao">拍照</string>
    <string name="pop_type_file_xuanzetupian">选择图片</string>
    <string name="selectfileactivity_title">选择文件</string>
    <string name="popwindow_biaoqian_shanchu">标签中的联系人不会被删除，是否删除标签？</string>
    <string name="popwindow_callphone_bodabangongdianhua">拨打办公电话</string>
    <string name="popwindow_callphone_bodashouji">拨打手机</string>
    <string name="receiptactivity_kaifapiao">发票</string>
    <string name="receiptactivity_kaipiaoshuoming">开票说明：</string>
    <string name="receiptactivity_kaipiaoshuoming1">1.可开发票额度需大于200元，方可开票，且免费为您快递。</string>
    <string name="receiptactivity_kaipiaoshuoming2">2.您可以开具最大发票额度，也可分次开票。</string>
    <string name="receiptactivity_kaipiaoshuoming3">3.您可以开多张发票，如邮寄地址相同，则统一快递。</string>
    <string name="receiptactivity_kaipiaoshuoming4">4.发票将于7-10个工作日内寄出。</string>
    <string name="customerservice_ask_phone">客服咨询电话</string>
    <string name="customerservice_help_phone">紧急援助电话</string>
    <string name="customerservice_ask_phone_number">400-888-9988</string>
    <string name="customerservice_help_phone_number">010-88575788</string>
</resources>