<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.lds.im.view.CustomerserviceActivity">

    <include layout="@layout/topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:src="@drawable/customerserviceactivity_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/customerservice_ask_phone"
                android:textColor="@color/default_color_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/custommerservice_takephone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customerservice_ask_phone_number"
                android:textColor="@color/blue"
                android:textColorLink="@color/default_color_blue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:src="@drawable/customerserviceactivity_imergace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/customerservice_help_phone"
                android:textColor="@color/default_color_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/custommerservice_takephone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customerservice_help_phone_number"
                android:textColor="@color/blue"
                android:textColorLink="@color/default_color_blue"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
