<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/type_file_pop_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_black_bg"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_select"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="文件选择"
            android:textColor="@color/titlecolor"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/line_bg"
            android:visibility="gone" />

        <TextView
            android:id="@+id/type_file_pop_camera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/pop_type_file_paizhao"
            android:textColor="@color/titlecolor"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/linesize"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/type_file_pop_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/pop_type_file_xuanzetupian"
            android:textColor="@color/titlecolor"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/linesize"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/type_file_pop_file"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/selectfileactivity_title"
            android:textColor="@color/titlecolor"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/type_file_pop_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:background="@drawable/button_select"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/common_cancel"
        android:textColor="@color/titlecolor"
        android:textSize="16dp" />

</LinearLayout>