<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="@dimen/margin_left_1_default"
        android:layout_marginRight="@dimen/margin_left_1_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_menu_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pop_addmuc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/popwindow_callphone_bodabangongdianhua"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <TextView
            android:id="@+id/pop_addcontact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/popwindow_callphone_bodashouji"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/pop_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/margin_left_1_default"
        android:layout_marginLeft="@dimen/margin_left_1_default"
        android:background="@drawable/pop_menu_bg"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/common_cancel"
        android:textColor="@color/black"
        android:textSize="16dp" />

</LinearLayout>